--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="main">
     <h3>Score:<span id="result"></span></h3>
   </div>
-  <div class="grid">
+  <div id="grid" class="grid">
   </div>
 
 </body>
