everything works now !!!!!! we re keep going tw!

--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
     <input id='text' type="text" placeholder="Text">
     <br>
     <input type="button" id='addVerseBtn' value="Add verse">
-    <br>
+    <br> 
     <input type="button" id='createBoardBtn' onclick="createBoard()" value="Create Board">
 
     <h3>Score:<span id="result"></span></h3>
   </div>
   <div id="grid" class="grid">
   </div>
+  <input type="button" id='refresh-btn' value="Refresh"
 
 </body>
 
