added two players

--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
     <br> 
     <input type="button" id='createBoardBtn' onclick="createBoard()" value="Create Board">
 
-    <h3>Score:<span id="result"></span></h3>
+    <!-- <h3>Score: <span id="result"></span></h3> -->
+
+    <h3>Score Player 1: <span id="resultPlayer1"></span></h3>
+    <h3>Score Player 2: <span id="resultPlayer2"></span></h3>
+    <h3>Turn: <span id="playerTurn"></span></h3>
+
   </div>
   <div id="grid" class="grid">
   </div>
