select option button kinda working - v0.1

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <input type="button" class="btn btn2" id='chooseProverbs' value="Proverbs">
 
-    <input type="button" class="btn btn3" id='chooseMore' value="More">
+    <input type="button" class="btn btn2" id='chooseMore' value="More">
      <input type="button" class="btn btn4" onclick="refresh()" value="Refresh">
     </div>
     <br>
@@ -27,16 +27,16 @@
     <br>
     <input id='text' type="text" placeholder="Text">
     <br>
-    <select id="setOption" name="cars">
-            <option id="fastOption" value="Male">FAST</option>
-            <option id="proverbsOption" value="Female">Proverbs</option>
-            <option id="mySet1Option" value="Male">MySet1</option>
-            <option id="mySet2Option" value="Female">MySet2</option>
+    <select id="selectBox" name="cars">
+            <option id="fastOption" value="fast">FAST</option>
+            <option id="proverbsOption" value="proverbs">Proverbs</option>
+            <option id="mySet1Option" value="mySet1">MySet1</option>
+            <option id="mySet2Option" value="mySet2">MySet2</option>
     </select>
     <br>
-    <input type="button" id='addVerseBtn' value="Add verse">
+    <input type="button" class="btn btn1"id='addVerseBtn' value="Add verse">
     <br> 
-    <input type="button" id='createBoardBtn' onclick="createBoard()" value="Create Board">
+    <!-- <input type="button" id='createBoardBtn' onclick="createBoard()" value="Create Board"> -->
 
     <!-- <h3>Score: <span id="result"></span></h3> -->
     <p><span id="congrats"></span></p>
