--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
     <!-- <input type="button" id='createBoardBtn' onclick="createBoard()" value="Create Board"> -->
 
     <!-- <h3>Score: <span id="result"></span></h3> -->
-    <p><span id="congrats"></span></p>
+    <div id="game-info">
     <h3>Score Player 1: <span id="resultPlayer1"></span></h3>
     <h3>Score Player 2: <span id="resultPlayer2"></span></h3>
-    <h3>Turn: <span id="playerTurn">Player 1</span></h3>
-
+    <h3 id="h3playerTurn">Turn: <span id="playerTurn">Player 1</span></h3>
+<p><span id="congrats"></span></p>
+</div>
   </div>
   <div id="grid" class="grid">
   </div>
