one and two Players 1.0

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <input type="button" class="btn btn4" id="twoPlayers" value="Two Players">
     </div>
     <br>
-    <div class="container">
 
+    <div class="container">
       <input type="button" class="btn btn3" id='chooseFast' value="FAST">
       <input type="button" class="btn btn4" id='chooseProverbs' value="Proverbs">
       <input type="button" class="btn btn4" id='chooseMore' value="More">
@@ -30,7 +30,9 @@
 
     <!-- GAME INFO -->
     <div id="game-info">
-      <h3>Score Player 1: <span id="result"></span></h3>
+      <div id="onePlayerScore">
+        <h3>Score Player 1: <span id="result"></span></h3>
+      </div>
       <div id="twoPlayersScore">
         <h3>Score Player 1: <span id="resultPlayer1"></span></h3>
         <h3>Score Player 2: <span id="resultPlayer2"></span></h3>
