--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <div id="game-info">
       <div id="onePlayerScore">
         <h3>Score Player 1: <span id="result"></span></h3>
+        <p><span id="congratsOne"></span></p>
       </div>
       <div id="twoPlayersScore">
         <h3>Score Player 1: <span id="resultPlayer1"></span></h3>
