style and details

--- a/index.html
+++ b/index.html
@@ -13,18 +13,15 @@
 <body>
   <div class="main">
     <!-- MENUS -->
-    <div class="container">
+    <div class="btnDiv">
       <input type="button" class="btn btn3" id="onePlayer" value="One Player">
       <input type="button" class="btn btn4" id="twoPlayers" value="Two Players">
     </div>
-    <br>
 
-    <div class="container">
+    <div class="btnDiv">
       <input type="button" class="btn btn3" id='chooseFast' value="FAST">
       <input type="button" class="btn btn4" id='chooseProverbs' value="Proverbs">
       <input type="button" class="btn btn4" id='chooseMore' value="More">
-      <input type="button" class="btn btn2" id="refreshBtn" value="Refresh">
-      <input type="button" class="btn btn2" id="continueBtn" value="Continue">
 
     </div>
 
@@ -43,7 +40,10 @@
     </div>
     <br>
     <br>
-
+    <div class="btnDiv" id="refCon">
+      <input type="button" class="btn btn2" id="refreshBtn" value="Refresh">
+      <input type="button" class="btn btn2" id="continueBtn" value="Continue">
+    </div>
     <!-- ADD VERSE -->
     <div id="addVerseDiv">
       <input id='reference' type="text" placeholder="Reference">
