working a bit in addVerse option

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
       <br>
       <input type="button" class="btn btn1" id='addVerseBtn' value="Add verse">
       <br>
+      <div id="arrayList">
+
+      </div>
     </div>
 
 
