--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="style.css">
   </link>
   <script src="app.js" charset="utf-8"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -19,7 +21,7 @@
     </div>
 
     <div class="btnDiv">
-      <input type="button" class="btn btn3" id='chooseFast' value="FAST">
+      <input type="button" class="btn btn3" id='chooseFast' value="FAST II">
       <input type="button" class="btn btn4" id='chooseProverbs' value="Proverbs">
       <input type="button" class="btn btn4" id='chooseMore' value="More">
 
@@ -40,10 +42,11 @@
     </div>
     <br>
     <br>
-    <div class="btnDiv" id="refCon">
+    <div class="btnDiv" id="refConBtn">
       <input type="button" class="btn btn2" id="refreshBtn" value="Refresh">
       <input type="button" class="btn btn2" id="continueBtn" value="Continue">
     </div>
+
     <!-- ADD VERSE -->
     <div id="addVerseDiv">
       <input id='reference' type="text" placeholder="Reference">
