--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 
 <body>
   <div class="main">
-
+<input id='username' type="text" placeholder="Username">
+<input id='email' type="text" placeholder="Email">
+<input id='password' type="password" placeholder="password">
+<br>
+  <input type="button" class="btn btn3" id="login" value="LOGIN">
+  <input type="button" class="btn btn4" id="register" value="REGISTER">
     <!-- ENTER NAME -->
     <input type="button" class="btn btn2" id="playersNameInputMenu" value="Players Name">
     <div id="playersName">
@@ -80,8 +85,6 @@
 
       </div>
     </div>
-
-
   </div>
 
   <!-- FLASHCARDS -->
