--- a/index.html
+++ b/index.html
@@ -14,12 +14,24 @@
 
 <body>
   <div class="main">
-<input id='username' type="text" placeholder="Username">
-<input id='email' type="text" placeholder="Email">
-<input id='password' type="password" placeholder="password">
-<br>
-  <input type="button" class="btn btn3" id="login" value="LOGIN">
-  <input type="button" class="btn btn4" id="register" value="REGISTER">
+
+    <!-- LOGIN -->
+    <div class="login">
+      <input type="button" class="btn btn3" id="login" value="LOGIN">
+    </div>
+    <br>
+    
+    <!-- REGISTER -->
+    <div class="register">
+<input id='username' type=" text" placeholder="Username">
+
+      <input id='email' type="text" placeholder="Email">
+      <input id='password' type="password" placeholder="password">
+      <br>
+
+      <input type="button" class="btn btn4" id="register" value="REGISTER">
+    </div>
+
     <!-- ENTER NAME -->
     <input type="button" class="btn btn2" id="playersNameInputMenu" value="Players Name">
     <div id="playersName">
@@ -35,6 +47,7 @@
       <input type="button" class="btn btn3" id="onePlayer" value="One Player">
       <input type="button" class="btn btn4" id="twoPlayers" value="Two Players">
     </div>
+
     <!-- CHOOSE SET -->
     <input type="button" class="btn btn2" id="schooseSetMenu" value="Choose Set">
     <div id="chooseSetBtn" class="btnDiv">
