added css alert (a lot of code copied)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Memory Game</title>
   <link rel="stylesheet" href="style.css">
   </link>
+  <link rel="stylesheet" href="alert.css" />
+  </link>
   <script src="app.js" charset="utf-8"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -20,7 +22,7 @@
 
     <div id="menu">
 
-      <input type="button" class="btn btn2 menu" id="play" value="Play">
+      <input type="button" class="btn btn2 menu button large round success" id="play" value="Play">
 
       <!-- REGISTER -->
       <!-- LOGIN -->
