login and sign out (token)

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       <!-- REGISTER -->
       <!-- LOGIN -->
       <input type="button" class="btn btn2 menu" id="loginBTN" value="Login">
-
+      <input type="button" class="btn btn2 menu" id="signOutBTN" value="Sign Out">
       <div class="login">
 
       </div>
 
-      <div class="register">
+      <div id="auth">
         <div></div>
         <input id='username' type="text" placeholder="Username">
         <br>
