--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <title>Memory Game</title>
   <link rel="stylesheet" href="style.css">
   </link>
-  <link rel="stylesheet" href="alert.css" />
-  </link>
-  <script src="app.js" charset="utf-8"></script>
+<link rel="stylesheet" href="alert.css">  </link>
+
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="alert.js" charset="utf-8"></script>
+  <script src="app.js" charset="utf-8"></script>
+ 
 </head>
 
 <body>
