--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  
   <script src="alert.js" charset="utf-8"></script>
+  <script src="card-arrays.js" charset="utf-8"></script>
   <script src="app.js" charset="utf-8"></script>
  
 </head>
