show verses from array in input

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   
   <script src="alert.js" charset="utf-8"></script>
+  <script src="auth.js" charset="utf-8"></script>
   <script src="card-arrays.js" charset="utf-8"></script>
   <script src="app.js" charset="utf-8"></script>
  
@@ -73,6 +74,7 @@
       <!-- ADD VERSE -->
       <input type="button" class="btn btn2 menu" id="addVerseMenu" value="Add Verses">
       <div id="addVerseDiv">
+        <div id="arrayInput"></div>
         <div id="createInput"></div>
 
         <br>
@@ -87,8 +89,6 @@
         <input type="button" class="btn btn4" id='addVerseBtn' value="Add new verse">
         <input type="button" class="btn btn4" id='pushVerseBtn' value="Push verses">
         <input type="button" class="btn btn4" id='createBoard' value="Create Board">
-        <br>
-        <div id="arrayList">
 
         </div>
       </div>
