--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="alert.js" charset="utf-8"></script>
   <script src="auth.js" charset="utf-8"></script>
   <script src="card-arrays.js" charset="utf-8"></script>
+  <script src="edit-sets.js" charset="utf-8"></script>
   <script src="app.js" charset="utf-8"></script>
  
 </head>
@@ -74,11 +75,8 @@
       <!-- ADD VERSE -->
       <input type="button" class="btn btn2 menu" id="addVerseMenu" value="Add Verses">
       <div id="addVerseDiv">
-        <div id="arrayInput"></div>
-        <div id="createInput"></div>
-
         <br>
-        <select id="selectBox">
+         <select id="selectBox">
           <option id=" moreOption" value="test">TEST</option>
           <option id="fastOption" value="fast">FAST</option>
           <option id="proverbsOption" value="proverbs">Proverbs</option>
@@ -86,6 +84,11 @@
           <option id="mySet2Option" value="mySet2">MySet2</option>
         </select>
         <br>
+        <div id="createInput"></div>
+
+        <br>
+       
+   
         <input type="button" class="btn btn4" id='addVerseBtn' value="Add new verse">
         <input type="button" class="btn btn4" id='pushVerseBtn' value="Push verses">
         <input type="button" class="btn btn4" id='createBoard' value="Create Board">
